# xml-schema-documentation-generator

./: .gitignore  .gitmodules  Makefile.in  README.md  README.txt  configure  configure.ac  configure.mk  empty.xml  example.mk.in  functions.xsl  generate  generate.mk  get-namespaces.xsl  notes.org  reconfigure.in  run  run.in  style.css  todo.txt
example/: Makefile
example/_site/: Makefile
example/_site/nc/PersonBirthDate/: index.html
example/_site/nc/PersonType/: img-example.html.m4  index.html  index.md.m4  svg-example.html
example/nc/DateType/: diagram.dot  index.md
example/nc/PersonBirthDate/: index.md
example/nc/PersonType/: diagram.dot  diagram.map  diagram.svg.base64  index.md  index.md.m4
inputs/: empty.xml
inputs/person/: instance-1.json  instance-1.xml
inputs/person-subset/niem/: wantlist.xml  xml-catalog.xml
inputs/person-subset/niem/codes/fbi_ncic/4.0/: fbi_ncic.xsd
inputs/person-subset/niem/codes/fbi_ndex/4.0/: fbi_ndex.xsd
inputs/person-subset/niem/domains/biometrics/4.0/: biom.xsd
inputs/person-subset/niem/domains/humanServices/4.0/: hs.xsd
inputs/person-subset/niem/domains/immigration/4.0/: immigration.xsd
inputs/person-subset/niem/domains/intelligence/4.0/: intelligence.xsd
inputs/person-subset/niem/domains/internationalTrade/4.0/: internationalTrade.xsd
inputs/person-subset/niem/domains/jxdm/6.0/: jxdm.xsd
inputs/person-subset/niem/domains/maritime/4.0/: maritime.xsd
inputs/person-subset/niem/domains/screening/4.0/: screening.xsd
inputs/person-subset/niem/niem-core/4.0/: niem-core.xsd
inputs/person-subset/niem/proxy/xsd/4.0/: xs.xsd
inputs/person/subset/niem/: wantlist.xml  xml-catalog.xml
inputs/person/subset/niem/codes/fbi_ncic/4.0/: fbi_ncic.xsd
inputs/person/subset/niem/codes/unece_rec20/4.0/: unece_rec20-misc.xsd
inputs/person/subset/niem/domains/jxdm/6.0/: jxdm.xsd
inputs/person/subset/niem/niem-core/4.0/: niem-core.xsd
lib/xml-catalog/: xml-catalog.xml
xsl/: backlinks.xsl  collect-backlinks.xsl  collect-from-catalog.xsl  collect-prefixes.xsl  collect-schemas-from-catalog.xsl  common-prefixes.xsl  common.xsl  gen-namespace.xsl  generate-indexes.xsl  generate-json-schema.xsl  generate-makefile.xsl  generate-mk.xsl  generate-mkdir.xsl  generate-namespace-index.xsl  generate-pre.xsl  generate-root-index.xsl  generate.xsl  index-list-of-namespaces.xsl  mode-component-diagram-td.xsl  mode-component-diagram.xsl  mode-component-json-schema.xsl  mode-component-page.xsl  mode-component-xml-schema.xsl  mode-components.xsl  mode-htmlify.xsl  mode-to-dot-html.xsl  root-index.xsl
